
2011-April-16 Struan Robertson

	* WKBTunnellingCoefficients.cpp: Initial revision of WKB tunnelling method (checked 
	in on behalf of Robin Shannon).
	* Examples/Tunnelling: WKB tunnelling test and baseline.

2011-April-16 Chris Morley

	* mesmer1.xsl, punch.xsl: added loss rates to 'punch' output, as requested
	by Robin.

2011-April-15 Struan Robertson

	* CollisionOperator.cpp/.h,System.cpp/.h: Introduced precision enum for clarity.
	* MesmerQA/HSO2: Baseline updated to test all precisions.

2011-March-26 Struan Robertson

	* CollisionOperator.cpp/.h: Minor refactoring.
	* BoltzmannDistribution.cpp: Normalization of distribution.

2011-March-19 Struan Robertson

	* ThermodynamicsTables.cpp: Addition of a read method to give some flexibility
	to table output.

2011-March-13 Struan Robertson

	* MolecularComponents.h/.cpp: Remove redundent code relating to atomic spin
	multiplicity, which is now treated in the DOS calculation methods.

2011-March-10 Struan Robertson

	* MolecularComponents.h/.cpp,ThermodynamicsTables.cpp: An initial revision
	of methods to calculate the thermodynamic functions and the addition of a 
	plug-in class to display their values.

2011-March-07 Struan Robertson

	* TMatrix.h: Introduced and tested routines to permute the collision 
	matrix so that its largest (in magnitude) diagonal elements are at the
	lower right hand corner, as this is supposed to improve numerical 
	stability in the householder transform. The results of the tests showed
	limited improvement, but as I suspect that we may need such permutations
	in the future, I have retained the methods and commented out the permutation 
	calls for the present.

2011-February-27 Struan Robertson

	* TMatrix.h: Shifted indicies to reduce integer arithmetic.
	* calcmethod.h: Removed header dependence (further work needed to
	remove dependency on TMatrix.h).
	* CollisionOperator.h/.cpp: Minor tidying, removal of unnecessary 
	argument. 

2011-February-26 Struan Robertson
